--- a/composer.json
+++ b/composer.json
@@ -59,7 +59,8 @@
         "optimize-autoloader": true,
         "allow-plugins": {
             "kylekatarnls/update-helper": true,
-            "symfony/thanks": true
+            "symfony/thanks": true,
+            "composer/installers": true
         }
     },
     "minimum-stability": "dev",
